--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -746,10 +746,9 @@
                                 <artifactItem>
                                     <groupId>org.apache.camel</groupId>
                                     <artifactId>camel-dozer</artifactId>
-                                    <version>${camel.version}</version>
-                                    <classifier>TESB</classifier>
+                                    <version>${camel.version}.tesb1</version>
                                     <outputDirectory>target/dependencies</outputDirectory>
-                                    <destFileName>camel-dozer-${camel.version}-TESB.jar</destFileName>
+                                    <destFileName>camel-dozer-${camel.version}.tesb1.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.github.dozermapper</groupId>
@@ -781,10 +780,17 @@
                                 <artifactItem>
                                     <groupId>org.apache.camel</groupId>
                                     <artifactId>camel-blueprint</artifactId>
-                                    <version>${camel.version}</version>
-                                    <classifier>TESB</classifier>
+                                    <version>${camel.version}.tesb1</version>
                                     <outputDirectory>target/dependencies</outputDirectory>
-                                    <destFileName>camel-blueprint-${camel.version}-TESB.jar</destFileName>
+                                    <destFileName>camel-blueprint-${camel.version}.tesb1.jar</destFileName>
+                                </artifactItem>
+                                <!-- patch for camel-blueprint (TESB-24132) -->
+                                <artifactItem>
+                                    <groupId>org.apache.camel</groupId>
+                                    <artifactId>camel-core</artifactId>
+                                    <version>${camel.version}.tesb2</version>
+                                    <outputDirectory>target/dependencies</outputDirectory>
+                                    <destFileName>camel-core-${camel.version}.tesb2.jar</destFileName>
                                 </artifactItem>
                                 <!-- patch for org.apache.aries.blueprint.core (TESB-25393) -->
                                 <artifactItem>
@@ -1035,11 +1041,11 @@
                                         value="org.apache.zookeeper/zookeeper/${zookeeper.version}"/>
                                     <!-- patch for xalan and xerces version -->
                                     <replacefilter>
-                                        <replacetoken>&lt;bundle dependency='true'&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/2.7.2_3&lt;/bundle&gt;</replacetoken> 
+                                        <replacetoken>&lt;bundle dependency='true'&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/2.7.2_3&lt;/bundle&gt;</replacetoken>
                                         <replacevalue></replacevalue>
                                     </replacefilter>
                                     <replacefilter>
-                                        <replacetoken>&lt;bundle dependency='true'&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xerces/2.11.0_1&lt;/bundle&gt;</replacetoken> 
+                                        <replacetoken>&lt;bundle dependency='true'&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xerces/2.11.0_1&lt;/bundle&gt;</replacetoken>
                                         <replacevalue></replacevalue>
                                     </replacefilter>
                                     <!-- Patch TESB-18685 -->
@@ -1051,6 +1057,10 @@
                                     <replacefilter
                                         token="&gt;mvn:org.apache.qpid/qpid-jms-client/${qpid-jms.version}&lt;"
                                         value="&gt;mvn:org.apache.qpid/qpid-jms-client/${qpid-jms.version}-tesb1&lt;"/>
+                                    <!-- missing property qpid-proton-j-bundle-version -->
+                                    <replacefilter
+                                            token="&gt;mvn:org.apache.qpid/proton-j/${qpid-proton-j-bundle-version}&lt;"
+                                            value="&gt;mvn:org.apache.qpid/proton-j/0.26.0&lt;"/>
                                     <replacefilter
                                         token="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.fastjson/${fastjson.version}&lt;"
                                         value="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.fastjson/${fastjson.version}.tesb1&lt;"/>
@@ -1077,11 +1087,15 @@
                                     <!-- patch for camel-dozer (TESB-23868) -->
                                     <replacefilter
                                         token="&gt;mvn:org.apache.camel/camel-dozer/${camel.version}&lt;"
-                                        value="&gt;mvn:org.apache.camel/camel-dozer/${camel.version}/jar/TESB&lt;"/>
+                                        value="&gt;mvn:org.apache.camel/camel-dozer/${camel.version}.tesb1&lt;"/>
                                     <!-- patch for camel-blueprint (TESB-24132) -->
                                     <replacefilter
                                         token="&gt;mvn:org.apache.camel/camel-blueprint/${camel.version}&lt;"
-                                        value="&gt;mvn:org.apache.camel/camel-blueprint/${camel.version}/jar/TESB&lt;"/>
+                                        value="&gt;mvn:org.apache.camel/camel-blueprint/${camel.version}.tesb1&lt;"/>
+                                    <!-- patch for camel-core (TESB-25575) -->
+                                    <replacefilter
+                                            token="&gt;mvn:org.apache.camel/camel-core/${camel.version}&lt;"
+                                            value="&gt;mvn:org.apache.camel/camel-core/${camel.version}.tesb2&lt;"/>
                                 </replace>
                                 <!-- Patch jetty version range in Camel features (TESB-18114/CAMEL-10433) -->
                                 <replaceregexp byline="false" flags="gim"
@@ -1092,25 +1106,25 @@
                                 <replace file="target/dependencies/apache-cxf-${cxf.version}-features.xml">
                                     <!-- patch for xalan and xerces version -->
                                     <replacefilter>
-                                        <replacetoken>&lt;bundle start-level="30"&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/2.7.2_3&lt;/bundle&gt;</replacetoken> 
+                                        <replacetoken>&lt;bundle start-level="30"&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/2.7.2_3&lt;/bundle&gt;</replacetoken>
                                         <replacevalue></replacevalue>
                                     </replacefilter>
                                     <replacefilter>
-                                        <replacetoken>&lt;bundle start-level="30" dependency="true"&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xerces/2.11.0_1&lt;/bundle&gt;</replacetoken> 
+                                        <replacetoken>&lt;bundle start-level="30" dependency="true"&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xerces/2.11.0_1&lt;/bundle&gt;</replacetoken>
                                         <replacevalue></replacevalue>
                                     </replacefilter>
                                     <!-- Patch used jetty version in CXF (TESB-16331) -->
                                     <replacefilter>
-                                        <replacetoken>feature version="[7,10)"&gt;jetty&lt;</replacetoken> 
+                                        <replacetoken>feature version="[7,10)"&gt;jetty&lt;</replacetoken>
                                         <replacevalue>feature version="[9,10)"&gt;jetty&lt;</replacevalue>
                                     </replacefilter>
                                     <!-- Patch the TESB-23159 -->
                                     <replacefilter>
-                                        <replacetoken>mvn:com.fasterxml.woodstox/woodstox-core/5.1.0</replacetoken> 
+                                        <replacetoken>mvn:com.fasterxml.woodstox/woodstox-core/5.1.0</replacetoken>
                                         <replacevalue>mvn:com.fasterxml.woodstox/woodstox-core/5.0.3</replacevalue>
                                     </replacefilter>
                                     <replacefilter>
-                                        <replacetoken>mvn:org.codehaus.woodstox/stax2-api/4.1</replacetoken> 
+                                        <replacetoken>mvn:org.codehaus.woodstox/stax2-api/4.1</replacetoken>
                                         <replacevalue>mvn:org.codehaus.woodstox/stax2-api/3.1.4</replacevalue>
                                     </replacefilter>
                                     <!-- patch for cxf-core, cxf-rt-transports-http (TESB-23159, TESB-23464) -->
@@ -1160,7 +1174,7 @@
 								<!-- patch for activemq-camel (TESB-21136) -->
                                 <replace file="target/dependencies/activemq-karaf-${activemq.version}-features.xml">
                                     <replacefilter>
-                                        <replacetoken>feature name="activemq-camel" version="${activemq.version}" resolver="(obr)"</replacetoken> 
+                                        <replacetoken>feature name="activemq-camel" version="${activemq.version}" resolver="(obr)"</replacetoken>
                                         <replacevalue>feature name="activemq-camel" version="${activemq.version}-tesb1" resolver="(obr)"</replacevalue>
                                     </replacefilter>
                                     <replacefilter
@@ -1253,7 +1267,7 @@
             </plugin>
 		</plugins>
 	</build>
-	
+
     <repositories>
         <repository>
             <id>springsource.release</id>
