TESB-27385: Runtime "org.ops4j.pax.logging.cfg" overwritten by Cloud-RemoteEngine

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
     </developers>
 
     <properties>
+        <org.apache.karaf.config.core.tesb.version>4.2.7.tesb1</org.apache.karaf.config.core.tesb.version>
         <packages.version>${project.version}</packages.version>
         <cxf.version>3.3.4</cxf.version>
         <camel.version>2.24.2</camel.version>
