--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
         <h2database.version>1.3.165</h2database.version>
         <jettison.version>1.4.0</jettison.version>
         <jasypt.version>1.9.3_1</jasypt.version>
-        <bouncycastle.version>1.60</bouncycastle.version>
+        <bouncycastle.version>1.65-b05</bouncycastle.version>
         <hibersap.version>1.2.0</hibersap.version>
         <javax.el.version>3.0.0</javax.el.version>
         <pax-cdi.version>1.0.0.RC2</pax-cdi.version>
