--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -26,17 +26,17 @@ respectStartLvlDuringFeatureStartup=true
 # Comma separated list of features repositories to register by default
 #
 featuresRepositories=\
-    mvn:org.apache.karaf.features/framework/${karaf.version}/xml/features, \
-    mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features,\
-    mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features,\
-    mvn:org.apache.karaf.features/enterprise/${karaf.version}/xml/features,\
-    mvn:org.apache.activemq/activemq-karaf/${activemq.version}/xml/features,\
-    mvn:org.apache.camel.karaf/apache-camel/${camel.version}/xml/features,\
-    mvn:org.apache.cxf.karaf/apache-cxf/${cxf.version}/xml/features,\
+    mvn:org.apache.karaf.features/framework/${framework.features.tesb.version}/xml/features, \
+    mvn:org.apache.karaf.features/standard/${standard.features.tesb.version}/xml/features,\
+    mvn:org.apache.karaf.features/spring/${spring.features.tesb.version}/xml/features,\
+    mvn:org.apache.karaf.features/enterprise/${enterprise.features.tesb.version}/xml/features,\
+    mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version.version}/xml/features,\
+    mvn:org.apache.camel.karaf/apache-camel/${camel.features.tesb.version}/xml/features,\
+    mvn:org.apache.cxf.karaf/apache-cxf/${cxf.features.tesb.version}/xml/features,\
     mvn:org.talend.esb/features/${project.version}/xml,\
     mvn:org.talend.esb.auxiliary.storage/auxiliary-storage-features/${project.version}/xml,\
-    mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.version}/xml/features,\
-    mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.version}/xml/features
+    mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.features.tesb.version}/xml/features,\
+    mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.features.tesb.version}/xml/features
 
 #
 # Comma separated list of features to install at startup
