--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -63,8 +63,13 @@
         <aries.version>1.0.0</aries.version>
         <pax-jdbc.version>1.3.4</pax-jdbc.version>
 
+        <xstream.version>1.4.17</xstream.version>
+        <cryptacular.version>1.2.4</cryptacular.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <ant.version>1.9.15</ant.version>
+
         <!-- Test dependencies -->
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -116,7 +121,22 @@
             <dependency>
                 <groupId>org.cryptacular</groupId>
                 <artifactId>cryptacular</artifactId>
-                <version>1.2.4</version>
+                <version>${cryptacular.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>${xstream.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ant</groupId>
+                <artifactId>ant</artifactId>
+                <version>${ant.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
